2012-05-09 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/hc08/gen.c,
	  src/hc08/ralloc.c:
	  Remove some unused variables.

2012-05-09 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/hc08/gen.c (aopOp): Handle spill location correctly even
	  though it is not actually allocated during dry run

2012-05-07 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* support/regression/ports/ds390/spec.mk:
	  Increase timeout from 40 to 60, since ds390 simulation on NetBSD is slow.

2012-05-06 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/hc08/gen.c (aopAdrStr): handle incompletely initialized
	  spill location symbols during dry run

2012-05-06 Borut Razem <borut.razem AT gmail.com>

	* .version, doc/sdccman.lyx: bumped version to 3.1.5
	* ChangeLog: removed unicode BOM
	* support/sdbinutils/binutils/Makefile.am,
	  support/sdbinutils/binutils/Makefile.in:
	  fixed the first part of bug #3518739 - Build weird behaviour...

2012-05-05 Maarten Brock <sourceforge.brock AT dse.nl>

	* support/regression/tests/gcc-torture-execute-pr44555.c: test was not
	  disabled for gcc 4.4.3, now it is for all 4.x.x < 4.6.0

2012-05-05 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCicode.c,
	* src/SDCCicode.h,
	* src/SDCCralloc.hpp,
	* src/SDCCset.c,
	* src/SDCCsymt.c,
	* src/hc08/gen.c,
	* src/hc08/gen.h,
	* src/hc08/main.c,
	* src/hc08/ralloc.c,
	* src/hc08/ralloc.h,
	* src/hc08/ralloc2.cc,
	* src/yacc.vcxproj,
	* src/z80/gen.c,
	* src/z80/ralloc.c,
	* src/z80/ralloc2.cc: Merged optralloc-hc08 branch

2012-05-05 Maarten Brock <sourceforge.brock AT dse.nl>

	* config.vcxproj,
	* configure_vc.awk,
	* doc/sdccman.lyx,
	* sdcc_vc.h.in, sdcc_vc_in.h: renamed sdcc_vc_in.h to sdcc_vc.h.in
	* src/SDCCval.c (byteOfVal),
	* src/z80/gen.c (genLeftShiftLiteral, genPointerGet),
	* src/mcs51/gen.c (genLeftShiftLiteral): fixed warnings
	* src/SDCCnaddr.hpp: renamed cfg_node to cfg_naddr_node