@@ -21,3 +21,39 @@
 
 #include "SDCClospre.hpp"
 
+// A quick-and-dirty function to get the CFG from sdcc (a simplified version of the function from SDCCralloc.hpp).
+void
+create_cfg_naddr(cfg_lospre_t &cfg, iCode *start_ic, ebbIndex *ebbi)
+{
+  iCode *ic;
+
+  std::map<int, unsigned int> key_to_index;
+  {
+    int i;
+
+    for (ic = start_ic, i = 0; ic; ic = ic->next, i++)
+      {
+        boost::add_vertex(cfg);
+        key_to_index[ic->key] = i;
+        cfg[i].ic = ic;
+      }
+  }
+
+  // Get control flow graph from sdcc.
+  for (ic = start_ic; ic; ic = ic->next)
+    {
+      if (ic->op != GOTO && ic->op != RETURN && ic->op != JUMPTABLE && ic->next)
+        boost::add_edge(key_to_index[ic->key], key_to_index[ic->next->key], 3.0f, cfg);
+
+      if (ic->op == GOTO)
+        boost::add_edge(key_to_index[ic->key], key_to_index[eBBWithEntryLabel(ebbi, ic->label)->sch->key], 6.0f, cfg);
+      else if (ic->op == RETURN)
+        boost::add_edge(key_to_index[ic->key], key_to_index[eBBWithEntryLabel(ebbi, returnLabel)->sch->key], 6.0f, cfg);
+      else if (ic->op == IFX)
+        boost::add_edge(key_to_index[ic->key], key_to_index[eBBWithEntryLabel(ebbi, IC_TRUE(ic) ? IC_TRUE(ic) : IC_FALSE(ic))->sch->key], 6.0f, cfg);
+      else if (ic->op == JUMPTABLE)
+        for (symbol *lbl = (symbol *)(setFirstItem (IC_JTLABELS (ic))); lbl; lbl = (symbol *)(setNextItem (IC_JTLABELS (ic))))
+          boost::add_edge(key_to_index[ic->key], key_to_index[eBBWithEntryLabel(ebbi, lbl)->sch->key], 6.0f, cfg);
+    }
+}
+
